--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+body{
+    padding: 10px;
+    font-family: 'Nunito', sans-serif;
+    text-align: center;
+}
+
 /* codigos que organizam o header*/
 
 .header-container{
@@ -96,5 +102,5 @@ textarea {
     margin-left: auto;
     margin-right: auto;
     width: 80vw;
-    height: 25vw;
+    height: 8vw;
 }
