--- a/styles.css
+++ b/styles.css
@@ -475,7 +475,7 @@ textarea {
 .wrapper{
     position: relative;
     backdrop-filter: blur(20px);
-    width: 70vw;
+    width: 100%;
 }
 .input-box label::after {
     content: " *";
@@ -514,7 +514,7 @@ textarea {
 .btn{
     margin-top: 3vh;
     width: 100%;
-    height: 4.5vh;
+    height: 6.5vh;
     font-size: 1em;
     font-weight: bold;
     border-color: rgb(56, 145, 68);
